--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "client": "^0.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -27,6 +28,7 @@
     "realtime-chat-app": "file:..",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7"
@@ -41,8 +43,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "sass-embedded": "^1.85.1",
     "globals": "^16.0.0",
+    "sass-embedded": "^1.85.1",
     "vite": "^6.2.2"
   }
 }
